REGRESSION(306531@main): imported/w3c/web-platform-tests/html/canvas/element/manual/filters/canvas-filter-shadow-and-properties.html is a constant IMAGE failure on macOS 26.4 https://bugs.webkit.org/show_bug.cgi?id=310405 rdar://172871030

Reviewed by Matt Woodrow.

On macOS 26.4, CG draws CSS filters and canvas filters. If canvas context is set
to apply both `filter` and `shadow` properties (shadowColor, shadowBlur,
shadowOffsetX and shadowOffsetY), the shadow properties will be dropped.

Even if we manage to keep the shadow properties, the calculations of transparency
layer outsets are missing the shadow properties. More importantly CG filters makes
drawing the filter and shadow interleave:

canvas drawing -> filter -> shadow -> filter

But this is different from what is expected:

canvas drawing -> shadow -> filter

This is an edge case (like canvas-filter-shadow-and-properties.html). The canvas
`filter` should be used instead of using the `shadow` properties. Combining them
should not happen in practice. So for this edge case, we can just fall back to
software filters.

* Source/WebCore/page/Page.cpp:
(WebCore::Page::preferredFilterRenderingModes const):

Canonical link: https://commits.webkit.org/309689@main